tags/3.6/bezantrakta/event/admin/event.rst
################
События / группы
################

********************
Список событий/групп
********************

Фильтры
=======

* текстовый поиск по названию события или по идентификатору схемы зала
* по опубликованным или НЕопубликованным событиям
* по событиям или по группам
* по дате/времени события
* по категориям событий
* по залам, к которым через схемы залов привязаны события
* по сервисам продажи билетов (СПБ), к которым принадлежат события

Действия с выбранными событиями/группами
========================================

.. only:: dev

  * удалить (только для суперадминистраторов)

* опубликовать или снять с публикации
* пересоздать кэш
* удалить добавленные вручную события

Столбцы в таблице событий/групп
===============================

* **Название**
* **ID** - идентификатор события в СПБ.
* **Публикация** - опубликовано событие или нет.
* **На главной** - размещено ли событие на главной странице сайта.
* **Группа** - группа это или событие.
* **Дата и время события**
* **Категория**
* **Зал**, к которому привязано событие (через схему зала).
* **Схема** - идентификатор схемы зала в СПБ.
* **Событий** - количество событий в группе.
* **Ссылок** - число внешних ссылок в событиях.
* **Контейнеров** - число афиш для показа событий на сайте, размещённых в разных контейнерах.
* **Сервис продажи билетов**, из которого импортрована группа или событие.
* **Сайт**, к которому привязана группа или событие.

**************************************
Страница редактирования события/группы
**************************************

Действия
========

* Кнопка "**Смотреть на сайте**" ведёт на страницу конкретного события на сайте.

Некоторые атрибуты событий испортируются из СПБ, если они были там добавлены, и могут быть при необходимости отредактированы админитсратором.

* **Название**

  Всего не более 60-65 символов.

* **Псевдоним**

  Несколько событий в СПБ могут иметь одну и ту же дату и время, если одна большая схема зала разбита на несколько схем (например, "*секторы*" и "*танцпол*") и одно и то же событие разбито на несколько событий в этих схемах. Поскольку комбинация даты/времени события и его псевдонима на сайте **должна быть уникальной**, при импорте событий из СПБ псевдоним по умолчанию создаётся как комбинация *названия события в латиннице* и *ID события в СПБ*, разделённых дефисами (например, ``usadba-jazz-2346``).

  Если событие единичное, перед публикацией события на сайте ID события в псевдониме при желании можно удалять.

* **Метатег `description`**

  Содержит ключевые слова или фразы, описывающие событие, но не более 3-5 шт. Всего не более 150-200 символов.

* **Метатег `keywords`**

  Несколько ключевых слов или фраз, разделённых запятыми, которые описывают событие. Всего не более 100-150 символов.

* **Описание события**

  HTML-редактор для редактирования текстового писания события. Возможно как угодно форматировать текст, внедрять в описание изображения, видеозаписи с YouTube и т.п.

  .. only:: dev

    Параметры редактора указаны в настройках проекта ``project.settings.base`` в параметре ``CK_EDITOR...``.

* **Публикация** - опубликовано ли событие или группа на сайте или нет.

  Если событие НЕ опубликовано - оно в любом случае не отображается на сайте, а при попытке зайти на него по прямой ссылке пользователь сайте увидит ошибку "*это событие ещё не опубликовано на сайте*" или "*это событие уже прошло и снято с публикации*".

* **На главной** - показывается ли событие или группа на главной странице сайта.

  При показе "на главной" афиши выводятся в контейнере "маленькие вертикальные" в блоке, где выводится содержимое страницы. При отсутствии маленькой вертикальной афиши выводится изображение-заглушка с логотипом Безантаркта.

* **Минимальная цена билета**

  Минимальная цена билета сохраняется в базу данных сайта при импорте информации из СПБ. Поскольку её значение может со временем меняться (если проданы все билеты на эту цену), её значение проверяется при каждом запуске задания на импорт и обновляется при её изменении.

* **Возрастное ограничение**

  `Согласно законодательству Российской Федерации <http://www.consultant.ru/document/cons_doc_LAW_108808/>`_ действуют следующие ограничения по возрасту на посещение зрелищных мероприятий:

  * **0+** (задаётся по умолчанию, если ограничение явно не указано в СПБ).
  * **6+**
  * **12+**
  * **16+**
  * **18+**

* **Дата и время события**

  * Для события - дата и время самого события.
  * Для группы - дата и время самого раннего на данный момент актуального события, привязанного к этой группе.

  Дата и время ханятся в базе данных сайта в нулевом часовом поясе (UTC) для единообразия при хранении информации, а выводятся (в админ-панели или на сайте) уже с учётом разницы во времени с часовым поясом города, к которому привязан конкретный сайт.

* **Категория** - привязка к какой-либо :doc:`категории событий <event_category>`.

  Категория группы распространяется на все привязанные к ней события при показе их на сайте.

* **Зал** (место проведения событий), к которому привязано событие (через схему зала).

* **Сайт**, к которому привязано событие.

* **Группа** - группа это или событие.

* **Сервис продажи билетов**, к которому принадлежит событие/группа.

* **ID события или группы** - идентификатор события/группы в СПБ.

* **ID схемы зала** - идентификатор схемы зала в СПБ.

* **Организатор** - текстовая информация об организаторе (актуально только для событий).

* **Агент** - текстовая информация о продавце билетов (актуально только для событий).

Настройки события/группы в JSON
===============================

* ``order`` { словарь 'ключ': 'значение' } - включение/выключение способов заказа билетов в событии (``true`` - включено, ``false`` - отключено, по умолчанию - ``true``):

  * ``self_cash`` логическое значение - получение в кассе (оффлайн-оплата),
  * ``courier_cash`` логическое значение - доставка курьером (оффлайн-оплата),
  * ``self_online`` логическое значение - получение в кассе (онлайн-оплата),
  * ``email_online`` логическое значение - электронный билет на email (онлайн-оплата).

  Если какой-то вариант включен в настройках сервиса продажи билетов и отключен в событии - он НЕ отображается на шаге 2 заказа билетов для этого события.

  Если какой-то вариант отключен в настройках сервиса продажи билетов и включен в событии - он в любом случае НЕ будет отображаться на шаге 2 заказа билетов для любого события в этом сервисе продажи билетов.

* ``extra`` { словарь 'ключ': 'значение' } - сервисный сбор в процентах от цены каждого из билетов в событии (по умолчанию - ``0``):

  * ``self_cash`` число - получение в кассе (оффлайн-оплата),
  * ``courier_cash`` число - доставка курьером (оффлайн-оплата),
  * ``self_online`` число - получение в кассе (онлайн-оплата),
  * ``email_online`` число - электронный билет на email (онлайн-оплата).

  Если сервисный сбор равен ``0`` - он НЕ используется.

* ``redirect`` строка - относительный адрес страницы события, на которую нужно перенаправлять пользователей, заходящих на страницу этого события (например, ``/afisha/2018/05/16/19-00/shou-improvizatsiya-158/``). Перенаправление требуется, как правило, **в случае переноса мероприятия**.</li>

* ``rescheduled`` логическое значение  - подпись над афишей события о его переносе.

* ``cancelled`` логическое значение - подпись над афишей события о его отмене.

* ``title`` строка - произвольная подпись над афишей события (например, подпись события в группе или город, отличающийся от города текущего сайта).

.. image:: /docs/_static/event/poster_overlay.png

Привязка событий к группе (только для группы)
=============================================
В таблице выводятся все события, привязанные к конкретной группе:

* **Событие**
* **Подпись события в группе** - подпись событий в блоке "**Билеты на другую дату**" (выбор актуальных событий в группе) на шаге 1 заказа билетов.

  События в группе могут быть двух типов:

  * Если группа содержит разные похожие события (концерты одного исполнителя в разные дни или повторяющиеся театральные спектакли) - это поле остаётся пустым. В этом случае в блоке "**Билеты на другую дату**" выводится дата и время каждого из доступных событий.
  * Если схема зала слишком большая, её можно разбить в СПБ на разные схемы залов (*секторы*, *танцпол*, *фанзона* и т.п.) и затем создавать для каждой схемы отдельные события, относящиеся к одному и тому же мероприятию. Поэтому в поле **Подпись события в группе** нужно указывать необходимое название (*секторы*, *танцпол*, *фанзона* и т.п.), которое в этом случае будет отображаться в блоке "**Билеты на другую дату**".

Привязка внешних ссылок к событиям (только для события)
=======================================================
В таблице выводятся все внешние ссылки, привязанные к конкретному событию:

* **Порядок** - порядковый номер ссылки в блоке внешних ссылок на шаге 1 заказа билетов.
* **Ссылка** - список имеющихся сторонних сайтов в разделе :doc:`Внешние ссылки в событиях <event_link>`, на которые можно добавлять внешние ссылки.
* **Внешняя ссылка** - текст внешней ссылки (URL). Если поле пустое - изображение выводится, но БЕЗ внешней ссылки.
* **Логотип** - вывод логотипа стороннего сайта, на который будет вести внешняя ссылка.

Привязка афиш события/группы к контейнерам (и для события, и для группы)
========================================================================
В таблице выводятся все афиши в разных контейнерах, привязанные к конкретному событию или группе:

* **Порядок** - порядковый номер афиши в выбранном контейнере.
* **Контейнер** - контейнер, в котором будет выводиться афиша.
* **Афиша** - выбор файла афиши для загрузки.
* **Афиша** - вывод загруженной афиши.

Маленькие вертикальные афиши нужно в любом случае добавлять:

* для всех опубликованных групп,
* для всех единичных событий, не принадлежащих группам.

Афиши в этом контейнере используются для вывода событий при их фильтрации на сайте (по дате в календаре, категории, залу, в текстовом поиске), а также для генерации электронных PDF-билетов. При отсутствии афиши будет выводиться изображение-заглушка с логотипом Безантракта.

Ссылки с афиш работают следующим образом:

* Афиша события ведёт на страницу этого события.
* Афиша группы ведёт на самое раннее на данный момент актуальное событие, привязанное к этой группе.

Если на данный момент все события в группе уже прошли, а новые ещё не добавлены, *афиша группы в любом случае НЕ выводится на сайте*. Поэтому группы можно постоянно оставлять опубликованными (особенно, если в них периодически создаются похожие повторяющиеся события).

Если порядковые номера для показа афиш в одном контейнере одинаковые (например, ``1``) - афиши сортируются по дате/времени события.

.. only:: dev

  ******
  Модели
  ******

  События/группы
  ==============
  В модели ``Event`` хранятся и события, и группы. События привязываются к группам с помощью модели ``EventGroupBinder``, которая связывает модель ``Event`` с самой собой, используя связь "*многие-ко-многим*".

  .. todo:: Переименовать модель ``Event`` в ``EventAndGroup`` или подобным образом.

  .. autoclass:: bezantrakta.event.models.Event

  Привязка событий к группе
  =========================
  .. autoclass:: bezantrakta.event.models.EventGroupBinder

  ***********
  Кэширование
  ***********
  .. autoclass:: bezantrakta.event.cache.EventCache

  **********
  Middleware
  **********
  При фильтрации событий на сайте по дате в календаре выбрананя дата добавляется в *request* с помощью ``EventCalendarMiddleware``.

  .. autoclass:: bezantrakta.event.middleware.EventCalendarMiddleware

  *************
  Представления
  *************

  Вывод событий "на главной"
  ==========================
  .. automodule:: bezantrakta.event.views.events_on_index

  Фильтрация событий по дате в календаре
  ======================================
  .. automodule:: bezantrakta.event.views.filter_calendar

  Фильтрация событий (текстовый поиск)
  ====================================
  .. automodule:: bezantrakta.event.views.filter_search
